# StellarInheritableAccountUX

./: .gitignore  CONFIG.md  NOTICE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
public/: config.json
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-core.toml
src-tauri/src/: commands.rs  keypair_store.rs  lib.rs  main.rs  notes_crypto.rs  rekrypt_ops.rs
src/app/: AppShell.jsx  MainTabs.jsx  UnlockPage.jsx
src/components/: AppTopBar.jsx  ContractMethodForm.jsx  MissingMigrationDataBanner.jsx  RefreshBar.jsx  RestoreConfirmModal.jsx  ScTxtImporter.jsx  SendAssetForm.jsx  ThemeToggle.jsx
src/context/: ThemeContext.jsx
src/services/: adminSuccession.js  cache.js  config.js  decrypt.js  invokeTemplates.js  session.js  theme.js
src/services/crypto/: codec.js  migrationStatus.js  notesCrypto.js  notesMigration.js  rekryptMigration.js  rekryptNotes.js
src/services/stellar/: candidates.js  candidatesList.js  context.js  contractInvoke.js  contractSpec.js  inheritable.js  notes.js  proxy.js  restore.js  restoreGate.js  sep41.js  signer.js  signingWorkbench.js  submit.js
src/tabs/: CandidatesTab.jsx  InfoTab.jsx  NotesTab.jsx  OperationsTab.jsx  SigningTab.jsx
src/utils/: formatDuration.js
