[package]
name = "inheritableaccountux"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "inheritableaccountux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
stellar-strkey = "0.0.13"
sha2 = "0.10"
base64 = "0.22"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand_core = { version = "0.6", features = ["getrandom"] }
stellar_recrypt = { git = "https://github.com/celestialkylin/StellarRecrypt", branch = "main" }
